eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Property_Postcode__c</fullName>
        <label>Property Postcode</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Finance1__c</fullName>
        <label>Purpose of Finance</label>
        <picklist>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Moving House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Release</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Finance__c</fullName>
        <label>Purpose of Finance</label>
        <picklist>
            <picklistValues>
                <fullName>New Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner Moving House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refinancing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Ineligible__c</fullName>
        <label>Reason Ineligible</label>
        <picklist>
            <picklistValues>
                <fullName>NOT Eligible</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Too Many People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCJs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age Criteria Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK residents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not main residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect contact details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not self employed 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not employed 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance amount less than £70K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property value below £100k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP already with us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsuitable Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Council property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affordability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_Hidden__c</fullName>
        <description>This is a test field to see if we can map BTL record type to opportunity upon conversion</description>
        <label>Record Type (Hidden)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Savings_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Applicants_Age__c</fullName>
        <formula>FLOOR((TODAY()-  BTL_DOB_Second_Applicant__c )/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Applicants Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seller_s_Team__c</fullName>
        <label>Seller&apos;s Team</label>
        <picklist>
            <picklistValues>
                <fullName>Business Development Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Office Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Banking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sole_or_Joint__c</fullName>
        <label>Sole or Joint?</label>
        <picklist>
            <picklistValues>
                <fullName>Sole HPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint HPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Star_Rating__c</fullName>
        <formula>IMAGE(CASE( Rating, &quot;Very Cold&quot;, &quot;/img/samples/stars_100.gif&quot;, &quot;Cold&quot;, &quot;/img/samples/stars_200.gif&quot;, &quot;Warm&quot;, &quot;/img/samples/stars_300.gif&quot;,&quot;Hot&quot;, &quot;/img/samples/stars_400.gif&quot;,&quot;/img/samples/stars_500.gif&quot;),&quot;Rating&quot;)</formula>
        <inlineHelpText>This is a sample formula field that displays stars based on the lead&apos;s rating.</inlineHelpText>
        <label>Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_last_email_sent__c</fullName>
        <inlineHelpText>This field displays the status of the last email sent by marketing. If blocked or suppressed, please update.</inlineHelpText>
        <label>Status of last email sent</label>
        <picklist>
            <picklistValues>
                <fullName>Bounced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clicked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Bounce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undeliverable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telephone_Number_to_appear_on_Prospect__c</fullName>
        <label>Telephone Number to appear on Prospect</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telephone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UK_resident__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UK resident?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_field__c</fullName>
        <label>Unique field</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weblead_Reference_Number__c</fullName>
        <description>Weblead reference Number</description>
        <inlineHelpText>Please enter the weblead reference number</inlineHelpText>
        <label>Weblead Reference Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_purchase_price_valuation_of__c</fullName>
        <label>Value of property</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Where_did_you_hear_about_HPP__c</fullName>
        <label>Where did you hear about HPP?</label>
        <picklist>
            <picklistValues>
                <fullName>IBB Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail - IBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV - Islam Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV - Channel S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV - Prime TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio - Unity FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio - Manchester Radio Ramadan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masjid Calendars - Regents Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masjid Calendars - Birmingham Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prayer timetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ramadan Booklet Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail - MPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail - MDUK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Telephone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend &amp; Family Recommendation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statement Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold by agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold by seller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBB Professional webpage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPU 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twins of Faith 19th November</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Why_lead_not_converted_to_Prospect__c</fullName>
        <label>Why lead not converted to Prospect</label>
        <picklist>
            <picklistValues>
                <fullName>Customer not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer has gone to another bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate not attractive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor customer service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not happy with the bank&apos;s processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed HPP eligibility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Will_the_property_be_the_main_residence__c</fullName>
        <label>Will the property be the main residence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test12__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>type_of_property__c</fullName>
        <description>If it is an ex-council property it must have been brought 3-5 years ago and be beyond the potential clawback period.</description>
        <label>Type of property?</label>
        <picklist>
            <picklistValues>
                <fullName>Council property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex- council property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privately Owned.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat (not retirement flat)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Manchester_Unconverted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Interested_in__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_of_lead_provider__c</field>
            <operation>equals</operation>
            <value>Manchester (1301)</value>
        </filters>
        <label>Manchester Unconverted Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>experian_leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Address_Line_2__c</columns>
        <columns>Address_Line_3__c</columns>
        <columns>Address_Line_4__c</columns>
        <columns>Address_Line_5__c</columns>
        <columns>LEAD.SALUTATION</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>experian leads</label>
        <sharedTo>
            <roleAndSubordinatesInternal>HeadofMarketing</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Buy_To_Let_Rent_Only</fullName>
        <active>false</active>
        <businessProcess>IBB</businessProcess>
        <description>HPP BTL Rent Only (Ijara)</description>
        <label>Buy To Let (Rent Only)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Buy_to_Let</fullName>
        <active>true</active>
        <businessProcess>IBB</businessProcess>
        <description>To be Selected for all HPP Buy-To-Let (BTL) Enquiries</description>
        <label>Buy to Let</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <businessProcess>IBB</businessProcess>
        <description>To be used for all events and the capture of new leads.</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_prospects</fullName>
        <active>true</active>
        <businessProcess>IBB</businessProcess>
        <description>To be used for externally purchased prospect lists.</description>
        <label>External prospects</label>
    </recordTypes>
    <recordTypes>
        <fullName>HPP</fullName>
        <active>true</active>
        <businessProcess>IBB</businessProcess>
        <description>To be used for all HPP Enquiries excluding HPP Buy-to Let (BTL)</description>
        <label>HPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Liabilities</fullName>
        <active>true</active>
        <businessProcess>IBB</businessProcess>
        <description>To log all savings &amp; current accounts leads.</description>
        <label>Liabilities</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>HPP_Eligibility_Rule</fullName>
        <active>false</active>
        <description>This rule will trigger to ensure that if Lead is interested in HPP then it will verify that the customer meets eligibility.</description>
        <errorConditionFormula>AND (
  OR (
     ISPICKVAL( Interested_in__c, &quot;HPP&quot;)),
     ISBLANK(  Please_enter_a_salary_amount_zero_or_a__c )
)</errorConditionFormula>
        <errorMessage>Gross Annual income must be completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_not_eligible</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Eligible__c =&quot;No&quot;,  IsConverted =True)</errorConditionFormula>
        <errorMessage>This customer is not eligible and therefore this lead cannot be converted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Self_Employed</fullName>
        <active>false</active>
        <description>AND(
ISPICKVAL(LeadSource, &quot;Other&quot;),
LEN(If_other_please_specify__c)=0)</description>
        <errorConditionFormula>AND(ISPICKVAL( Employment_Status__c , &quot;Self employed professional (ETYPP)&quot;),
  ISPICKVAL( Does_Customer_have_2_years_Accounts__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Does_Customer_have_2_years_Accounts__c</errorDisplayField>
        <errorMessage>Please Confirm that if the Customer is self employed that they have 2 years audited accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Self_Employed_non_professional_Check</fullName>
        <active>false</active>
        <description>Checks whether if Self Employed non professional that customer has 2 years accounts.</description>
        <errorConditionFormula>AND(ISPICKVAL( Employment_Status__c , &quot;Self employed non-professional (ETYPN)&quot;),
  ISPICKVAL( Does_Customer_have_2_years_Accounts__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Does_Customer_have_2_years_Accounts__c</errorDisplayField>
        <errorMessage>Please Confirm that if the Customer is self employed that they have 2 years audited accounts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>marketing_other</fullName>
        <active>false</active>
        <description>AND(
ISPICKVAL(LeadSource, &quot;Other&quot;),
LEN(If_other_please_specify__c)=0)</description>
        <errorConditionFormula>AND(ISPICKVAL(LeadSource, &quot;Other&quot;),LEN(If_other_please_specify__c)=0)</errorConditionFormula>
        <errorDisplayField>If_other_please_specify__c</errorDisplayField>
        <errorMessage>Please complete the other box.</errorMessage>
    </validationRules>
</CustomObject>